# WebRemoteDisplay

./: devcontainer.json
.devcontainer/: devcontainer.json
backend/: Cargo.toml
backend/assets/: index.html
backend/src/: main.rs  pages.rs
client/: WebRemoteDisplay.Client.sln
client/src/Properties/: launchSettings.json
client/src/wwwroot/: index.html  manifest.json
driver/: Cargo.toml
frontend/.devcontainer/: devcontainer.json
frontend/workspace/: index.html  package-lock.json
src/: Cargo.toml
src/driver/entry/: Cargo.toml
