[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.10", features=["ws"] }
futures = "0.3.26"
once_cell = "1.17.1"
serde = "1.0.159"
tokio = { version= "1.26.0", features=["full"] }
